--- a/Style2.css
+++ b/Style2.css
@@ -56,7 +56,7 @@
       
          hr
        {
-           border: 1px solid #D8D8F6;
+           border: 2px solid #EF959D;
            width: 95%;
        }
 
