--- a/Style2.css
+++ b/Style2.css
@@ -99,6 +99,10 @@
            background-attachment: fixed;
         } 
 
+         footer
+         {
+            float: right;
+         }
           table 
         {
             background-image: url(images/transparency.png);
